# ling-twins

./: README.md  requirements.txt  setup.py
examples/: find_doppelgangers.py
ocaml/: dune  dune-project
ocaml/src/: linguistic.ml  main.ml
semantic_doppelgangers/: __init__.py  data.py  finder.py  models.py  ocaml_bridge.py
semantic_doppelgangers/linguistic/: advanced_analysis.py  analysis.py
