(lang dune 3.0)
(name semantic_doppelgangers)
(version 0.1.0)

(generate_opam_files true)

(package
 (name semantic_doppelgangers)
 (synopsis "Semantic Doppelgängers - Cross-domain and Cross-lingual Retrieval")
 (description "Advanced linguistic processing module for semantic similarity and paraphrase detection")
 (depends
  (ocaml (>= 4.14.0))
  (dune (>= 3.0))
  (core (>= 0.15.0))
  (core_kernel (>= 0.15.0))
  (core_unix (>= 0.15.0))
  (angstrom (>= 0.15.0))
  (yojson (>= 2.0.0))
  (ppx_deriving (>= 5.2.1))
  (ppx_deriving_yojson (>= 3.6.0)))) 